@@ -1,5 +1,6 @@
 kfocus-settings (24.04.1~beta5) UNRELEASED; urgency=medium
 
+  [ Aaron Rainbolt ]
   * debian/control: Bump debhelper-compat to 13 (#4085)
   * debian/control: Bump Standards-Version to 4.6.2 (#4085)
   * debian/control: Remove inaccurate Vcs and Homepage info (#4085)
@@ -9,6 +10,9 @@ kfocus-settings (24.04.1~beta5) UNRELEASED; urgency=medium
   * etc/*: Store config in usr/lib/kfocus/conf and symlink to the appropriate
     locations (#4085)
   * Makefile: Remove obsolete Makefile. (#4085)
+
+  [ Michael S. Mikowski ]
+  * WIP large desktop layout, horiz and vert (#4240)
 
  -- Aaron Rainbolt <arainbolt@kfocus.org>  Tue, 30 Apr 2024 17:13:10 -0500
 
